--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,689 @@
-@import url(./vars.css);
-@import url(./reset.css);
-@import url(./fonts.css);
-@import url(./mix-class.css);
-@import url(./common.blocks/burger.css);
-@import url(./common.blocks/header.css);
-@import url(./common.blocks/main.css);
-@import url(./common.blocks/hero.css);
-@import url(./common.blocks/candles.css);
-@import url(./common.blocks/product.css);
-@import url(./common.blocks/about.css);
-@import url(./common.blocks/modern.css);
-@import url(./common.blocks/room.css);
-@import url(./common.blocks/wash.css);
-@import url(./common.blocks/industry.css);
-@import url(./common.blocks/footer.css);
+:root {
+    --title-color: #B2B2B2;
+    --text-color: #262626;
+    --link-color: #B2B2B2;
+    --btn-color: #262626;
+    --subtitle-color: #262626;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit
+}
+
+html {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+.page,
+.page__body {
+    width: 100%;
+    height: 100%;
+}
+
+.page__body {
+    margin: 0;
+    font-family: Roboto;
+}
+
+.button-reset {
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+}
+
+.list-reset {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(/fonts/Roboto-Regular.woff),
+        url(/fonts/Roboto-Regular.woff2);
+    font-display: swap;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.full-screen {
+    background-position: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
+
+.container {
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+@media(min-width:576px) {
+    .container {
+        padding: 0 40px;
+    }
+}
+
+.title {
+    margin: 0;
+    color: var(--title-color);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 13px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+}
+
+.text {
+    margin: 0;
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0.5px;
+}
+
+.btn {
+    color: var(--btn-color);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+}
+
+.link {
+    color: var(--link-color);
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.subtitle {
+    color: var(--subtitle-color);
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+}
+
+.img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.ibg {
+    position: relative;
+}
+
+.ibg img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.dis-scroll {
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+    overscroll-behavior: none;
+}
+
+.burger {
+    --width: 40px;
+    --height: 30px;
+    --height-line: 4px;
+    position: relative;
+    z-index: 10;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: none;
+    background: transparent;
+    width: var(--width);
+    height: var(--height);
+    padding: 0;
+    cursor: pointer;
+}
+
+.burger__line {
+    height: var(--height-line);
+    width: 100%;
+    background-color: #262626;
+}
+
+@media(min-width:576px) {
+    .burger {
+        width: 50px;
+        height: 50px;
+    }
+}
+
+.header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 25px 0;
+    background-color: #E7F066;
+}
+
+.header__logo {
+    position: relative;
+    z-index: 1;
+}
+
+.header__logo svg {
+    width: 60px;
+    height: 25px;
+}
+
+@media(min-width:576px) {
+    .header__logo svg {
+        width: 100px;
+        height: 40px;
+    }
+}
+
+.header__container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__content {
+    display: flex;
+    align-items: center;
+}
+
+.header__cart {
+    position: relative;
+    z-index: 1;
+    margin-right: 30px;
+    color: #262626;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 13px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+}
+
+.main {
+    min-height: 100%;
+    overflow: hidden;
+}
+
+.hero {
+    background-color: #E7F066;
+}
+
+.hero__container {
+    padding: 0;
+    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero__title-link {
+    position: relative;
+    bottom: -140px;
+    z-index: 1;
+    padding-left: 40px;
+    font-size: 12px;
+    line-height: 13px
+}
+
+.hero__img-block {
+    flex: 1 1 78.26%;
+}
+
+.hero__img-box {
+    padding-bottom: 61.39%;
+    margin-bottom: 40px;
+}
+
+.hero__content {
+    flex: 1 1 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero__link {
+    position: relative;
+    display: inline-block;
+    color: #262626;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    padding-bottom: 5px;
+}
+
+.hero__text {
+    max-width: 275px;
+}
+
+.hero__text_size {
+    font-size: 25px;
+}
+
+.hero__text_white {
+    margin: 0;
+    color: #F1F1EE;
+    font-size: 16px;
+}
+
+.hero__text-link {
+    position: relative;
+    color: #262626;
+    font-size: 12px;
+    padding-bottom: 5px;
+}
+
+.hero__text-link::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 145px;
+    height: 1px;
+    left: 0;
+    background-color: #262626;
+}
+
+.hero__text_top {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-left: 40px;
+    margin-bottom: 30px;
+}
+
+.hero__img-block-text {
+    max-width: 456px;
+}
+
+.hero__img-block-text {
+    padding-left: 40px;
+    margin-bottom: 40px;
+}
+
+.hero__box {
+    position: relative;
+    max-width: 100%;
+    background-color: #1B1B1B;
+    padding: 40px;
+    margin-top: auto;
+}
+
+.hero__link_white {
+    color: #F1F1EE;
+    font-size: 12px;
+    border-bottom: 1px solid #F1F1EE;
+}
+
+@media(min-width:992px) {
+    .hero__container {
+        flex-direction: row;
+        padding-right: 15px;
+    }
+
+    .hero__box {
+        right: 5px;
+        max-width: 376px;
+        padding: 10px;
+    }
+
+    .hero__content {
+        padding-top: 110px;
+    }
+
+    .hero__img-block-text {
+        margin-bottom: 0;
+    }
+}
+
+@media(min-width:1200px) {
+    .hero__box {
+        padding: 40px;
+        right: 40px;
+    }
+}
+
+.candles {
+    min-height: 800px;
+    padding: 40px 0;
+    position: relative;
+    background-color: #9C8554;
+}
+
+.candles__content {
+    min-height: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.candles__title {
+    position: relative;
+    z-index: 1;
+    font-size: 15px;
+}
+
+.candles__text {
+    max-width: 278px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: #B2B2B2;
+}
+
+.candles__link {
+    padding-bottom: 5px;
+    font-size: 12px;
+    border-bottom: 1px solid #B2B2B2;
+}
+
+.candles__text-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+
+.candles__img {
+    max-width: 1065px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.candles__text_size {
+    margin: 0;
+}
+
+.product {
+    padding-bottom: 115px;
+    background-color: #EBEBEB;
+
+}
+
+.product__container {
+    padding: 0;
+}
+
+.product__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.product__text {
+    margin-left: 40px;
+    transform: translateY(-45px);
+    letter-spacing: 1.2px;
+    font-size: 12px;
+}
+
+.about {
+    padding-bottom: 115px;
+    background: #EBEBEB;
+}
+
+.about__container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 30px;
+}
+
+.about__img {
+    max-width: 796px;
+}
+
+.about__content {
+    max-width: 310px;
+}
+
+.about__title {
+    margin-bottom: 10px;
+    color: #262626;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+}
+
+
+
+.about__text {
+    margin-bottom: 20px;
+}
+
+.about__text_size {
+    margin: 0;
+    margin-bottom: 40px;
+    font-size: 28px;
+    line-height: 32px;
+}
+
+.about__text_small {
+    font-size: 16px;
+    line-height: 130%;
+}
+
+.about__btn {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #262626;
+}
+
+.modern {
+    position: relative;
+    min-height: 800px;
+    padding: 40px 0;
+    background-color: #A26779;
+}
+
+.modern__content {
+    min-height: 800px;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.modern__text {
+    max-width: 274px;
+    margin-bottom: 20px;
+    color: #B2B2B2;
+}
+
+.modern__link {
+    padding-bottom: 5px;
+    font-size: 12px;
+    border-bottom: 1px solid #B2B2B2;
+}
+
+.modern__img {
+    max-width: 1065px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.modern__subtitle {
+    display: block;
+    color: #B2B2B2;
+    font-size: 25px;
+    text-align: right;
+}
+
+.room {
+    min-height: 1000px;
+    padding-top: 119px;
+    background: url(/img/flower.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.room__title {
+    margin-bottom: 10px;
+    color: #262626;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+}
+
+.room__subtitle {
+    display: block;
+    margin-bottom: 40px;
+    font-size: 25px;
+    line-height: 32px;
+}
+
+.room__text {
+    max-width: 278px;
+    margin-bottom: 2px;
+    font-size: 16px;
+}
+
+.room__btn {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #262626;
+}
+
+.wash {
+    position: relative;
+    min-height: 800px;
+    padding: 40px 0;
+    background-color: #504B4D;
+}
+
+.wash__content {
+    min-height: 800px;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.wash__text {
+    max-width: 274px;
+    margin-bottom: 20px;
+    color: #B2B2B2;
+}
+
+.wash__link {
+    padding-bottom: 5px;
+    font-size: 12px;
+    border-bottom: 1px solid #B2B2B2;
+}
+
+.wash__img {
+    max-width: 1065px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.wash__subtitle {
+    display: block;
+    color: #B2B2B2;
+    font-size: 25px;
+    text-align: right;
+}
+
+.industry {
+    position: relative;
+    min-height: 800px;
+    padding: 40px 0;
+    background-color: #B04836;
+}
+
+.industry__content {
+    min-height: 800px;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.industry__text {
+    max-width: 274px;
+    margin-bottom: 20px;
+    color: #B2B2B2;
+}
+
+.industry__link {
+    padding-bottom: 5px;
+    font-size: 12px;
+    border-bottom: 1px solid #B2B2B2;
+}
+
+.industry__img {
+    max-width: 1065px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.industry__subtitle {
+    display: block;
+    color: #B2B2B2;
+    font-size: 25px;
+    text-align: right;
+}
+
+.footer {
+    min-height: 200px;
+    padding: 50px 0;
+    background-color: #262626;
+}
+
+.footer__title {
+    margin-bottom: 20px;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+}
+
+.footer__form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.footer__label {
+    display: flex;
+    flex-direction: column;
+    color: #CCC;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0.5px;
+}
+
+.footer__input {
+    width: 280px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #CCC;
+    border: none;
+    border-bottom: 1px solid #CCC;
+    background-color: transparent;
+}
+
+.footer__btn {
+    color: #CCC;
+    align-self: end;
+}
