--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ html {
 
 @font-face {
     font-family: Roboto;
-    src: url(/fonts/Roboto-Regular.woff),
-        url(/fonts/Roboto-Regular.woff2);
+    src: url(../fonts/Roboto-Regular.woff),
+        url(../fonts/Roboto-Regular.woff2);
     font-display: swap;
     font-weight: 400;
     font-style: normal;
