--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,8 @@ html {
 }
 
 .burger {
-    --width: 40px;
-    --height: 30px;
+    --width: 50px;
+    --height: 50px;
     --height-line: 4px;
     position: relative;
     z-index: 10;
@@ -295,6 +295,7 @@ html {
     font-size: 16px;
 }
 
+
 .hero__text-link {
     position: relative;
     color: #262626;
@@ -321,7 +322,9 @@ html {
 }
 
 .hero__img-block-text {
-    max-width: 456px;
+    max-width: 500px;
+    font-size: 25px;
+    line-height: 130%;
 }
 
 .hero__img-block-text {
