--- a/css/style.css
+++ b/css/style.css
@@ -167,13 +167,6 @@ html {
     background-color: #262626;
 }
 
-@media(min-width:576px) {
-    .burger {
-        width: 50px;
-        height: 50px;
-    }
-}
-
 .header {
     position: absolute;
     top: 0;
@@ -321,7 +314,9 @@ html {
 }
 
 .hero__img-block-text {
-    max-width: 456px;
+    max-width: 500px;
+    font-size: 25px;
+    line-height: 130%;
 }
 
 .hero__img-block-text {
