--- a/css/style.css
+++ b/css/style.css
@@ -314,15 +314,12 @@ html {
     margin-bottom: 30px;
 }
 
-.hero__img-block-text {
+.hero__img-block_text {
+    padding-left: 40px;
+    margin-bottom: 40px;
     max-width: 500px;
     font-size: 25px;
     line-height: 130%;
-}
-
-.hero__img-block-text {
-    padding-left: 40px;
-    margin-bottom: 40px;
 }
 
 .hero__box {
@@ -355,7 +352,7 @@ html {
         padding-top: 110px;
     }
 
-    .hero__img-block-text {
+    .hero__img-block_text {
         margin-bottom: 0;
     }
 }
@@ -369,30 +366,50 @@ html {
 
 .candles {
     position: relative;
-    min-height: 800px;
-    padding: 40px 0;
+    /* min-height: 800px; */
     background-color: #9C8554;
 }
 
-@media(max-width:575px) {
-    .candles {
-        min-height: 400px;
+.candles__container {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    padding-bottom: 40px;
+}
+
+@media(min-width:768px) {
+    .candles__container {
+        flex-direction: row;
     }
 }
+
 
 
 .candles__content {
-    min-height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex: 1 1 25%;
+    padding: 40px 15px 0 40px;
 }
 
-@media(max-width:575px) {
+@media(max-width:575px) {}
+
+.candles__img-block {
+    position: relative;
+    flex: 1 1 75%;
+}
+
+.candles__img-box {
+    padding-bottom: 61.39%;
+    margin-bottom: 40px;
+}
+
+/* @media(max-width:575px) {
     .candles__content {
         min-height: 450px;
     }
-}
+} */
 
 
 .candles__title {
@@ -402,11 +419,13 @@ html {
 }
 
 .candles__text {
-    max-width: 278px;
+    max-width: 280px;
+    width: 100%;
     margin-bottom: 20px;
     font-size: 16px;
     color: #B2B2B2;
 }
+
 
 .candles__link {
     padding-bottom: 5px;
@@ -423,21 +442,22 @@ html {
 
 
 
-.candles__img {
-    max-width: 1065px;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
 .candles__text_size {
+    max-width: 100%;
+    text-align: right;
+    padding-right: 40px;
     margin: 0;
 }
 
 .product {
     padding-bottom: 115px;
     background-color: #EBEBEB;
+}
 
+@media(max-width:575px){
+    .product {
+        padding-bottom: 30px;
+    }
 }
 
 .product__container {
@@ -678,7 +698,7 @@ html {
     justify-content: space-between;
 }
 
-@media(max-width:575px){
+@media(max-width:575px) {
     .industry {
         min-height: 400px;
     }
